# chess

./: .gitignore  _  index.html  log.txt  main.js  main.ts  server.go  style.css  tsconfig.json
chess/: board.ts  index.html  main.ts  style.css
engine/: .clangd  CMakeLists.txt  build.sh  test.sh
engine/.cache/clangd/index/: board.h.EEB6A8EED8C91709.idx  chess_types.h.68FAFDF06CFF9801.idx
engine/include/: board.h  board_types.h  chess_types.h  prettyboard.h  pst_manager.h  rays.h  search.h
engine/lib/: board.cpp  board_bit_manipulation.cpp  board_evaluate.cpp  board_init.cpp  board_moves.cpp  prettyboard.cpp  pst_manager.cpp  rays.cpp  search.cpp
engine/src/: driver.cpp
engine/test/: main_test.cpp
